--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>8th Wall Web: Animations</title>
+    <title>Nafisul Khondaker</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 
     <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
