--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Nafisul Khondaker</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
 
     <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
     <script src="//cdn.8thwall.com/web/aframe/8frame-1.1.0.min.js"></script>
@@ -15,38 +14,10 @@
 
     <!-- 8thWall Web - Replace the app key here with your own app key -->
     <script async src="//apps.8thwall.com/xrweb?appKey=xvLXgIRCZUuklOMazeSFA1elLcA0NtgvXx5RaLqPjtM37HQtK2bC4ClRRho8gjXQEDavQd"></script>
-
-    <script>
-      AFRAME.registerComponent('next-button', {
-        init() {
-          const animationList = ['idle', 'pockets', 'hiphop', 'chicken']
-
-          const model = document.getElementById('model')
-          const nextButton = document.getElementById('nextbutton')
-
-          nextButton.style.display = 'block'
-
-          let idx = 1  // Start with the 2nd animation because the model starts with idle animation
-          const nextAnimation = () => {
-            model.setAttribute('animation-mixer', {
-              clip: animationList[idx],
-              loop: 'repeat',
-              crossFadeDuration: 0.4,
-            })
-            idx = (idx + 1) % animationList.length
-          }
-          nextButton.onclick = nextAnimation  // Switch to the next animation when the button is pressed.
-        },
-      })
-    </script>
   </head>
   <body>
-    <div id="nextbutton" style="display: none; z-index: 10">
-      <h2>Next Animation</h2>
-    </div>
 
     <a-scene
-      next-button
       xrextras-gesture-detector
       xrextras-almost-there
       xrextras-loading
@@ -56,7 +27,7 @@
 
       <!-- We can define assets here to be loaded when A-Frame initializes -->
       <a-assets>
-        <a-asset-item id="animatedModel" src="mixamo-animated-lowpoly.glb"></a-asset-item>
+        <a-asset-item id="animatedModel" src="./TrophyAshV5.glb"></a-asset-item>
       </a-assets>
 
       <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
@@ -88,8 +59,7 @@
         id="model"
         gltf-model="#animatedModel"
         class="cantap"
-        scale="3 3 3"
-        animation-mixer="clip: idle; loop: repeat"
+        scale="0.5 0.5 0.5"
         xrextras-hold-drag
         xrextras-two-finger-rotate
         xrextras-pinch-scale
